<resources>
    <string name="app_name">e-Payroll</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="shift">Shift</string>
    <string name="announcement">Announcement</string>
    <string name="good_morning">Good Morning</string>
    <string name="dini_ramadani">Dini Ramadani</string>
    <string name="inbox">Inbox</string>
    <string name="account">Personal Info</string>
    <string name="calendar">Calendar</string>
    <string name="absent">Absent</string>
    <string name="slip">Slip</string>
    <string name="overtime">Overtime</string>
    <string name="reimbursment">Reimbursment</string>
    <string name="request">Request</string>
    <string name="history">History</string>
    <string name="employee">Employee</string>

</resources>