<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/login_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/login_background"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="286.3dp"
            android:layout_height="56dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColor="@color/my_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.646"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="Autofill,RtlSymmetry,TextContrastCheck" />

        <EditText
            android:id="@+id/TextPassword3"
            android:layout_width="286.3dp"
            android:layout_height="56dp"
            android:background="@drawable/frame_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/my_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
            app:layout_constraintVertical_bias="0.091"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="Autofill,RtlSymmetry,TextContrastCheck" />

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:buttonTint="#99D9D9D9"
            android:fontFamily="sans-serif"
            android:text="@string/remember_me"
            android:textColor="@color/remember_me"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/TextPassword3"
            app:layout_constraintTop_toBottomOf="@+id/TextPassword3" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/forgot_password"
            app:layout_constraintBottom_toBottomOf="@+id/rememberMeCheckBox"
            app:layout_constraintEnd_toEndOf="@+id/TextPassword3"
            app:layout_constraintTop_toTopOf="@+id/rememberMeCheckBox" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="286.3dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/poppins_bold"
            android:onClick="login"
            android:text="@string/login_text"
            android:textColor="@color/textbox"
            android:textSize="22sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextPassword3"
            app:layout_constraintVertical_bias="0.585"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>