<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/beranda_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beranda_bg"
        tools:ignore="ContentDescription" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilepicture"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pasfoto_dini"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/Greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/poppins"
        android:text="@string/good_morning"
        android:textColor="@color/my_black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="187dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/dini_ramadani"
        android:textColor="@color/my_black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Greeting"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:text="Quality Control"
        android:textColor="@color/my_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="Since 2024"
        android:textColor="@color/my_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="HardcodedText" />

    <FrameLayout
        android:id="@+id/frameLayoutShift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gradient_beranda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/shift"
                android:layout_width="374dp"
                android:layout_height="41dp"
                android:layout_marginTop="10dp"
                android:paddingStart="40dp"
                android:text="@string/shift"
                android:textColor="@color/my_black"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintBounds" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/frame_background" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/fitur"
        android:layout_width="360dp"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="200dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutShift">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_calendar"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"
                app:srcCompat="@drawable/btn_calendar"
                tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry,ImageContrastCheck,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_absent"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"
                app:srcCompat="@drawable/btn_absent"
                tools:ignore="ContentDescription,ImageContrastCheck,RtlHardcoded,RtlSymmetry,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_slip2"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"
                app:srcCompat="@drawable/btn_slip"
                tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="90dp"
            android:orientation="horizontal"
            tools:ignore="VisualLintBounds">

            <ImageButton
                android:id="@+id/btn_overtime"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"
                app:srcCompat="@drawable/btn_overtime"
                tools:ignore="ContentDescription,ImageContrastCheck,RtlHardcoded,RtlSymmetry,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_reimbursment"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"

                app:srcCompat="@drawable/btn_reimbursment"
                tools:ignore="ContentDescription,ImageContrastCheck,RtlHardcoded,RtlSymmetry,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_request"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"
                app:srcCompat="@drawable/btn_request"
                tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,VisualLintBounds" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_history"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"
                app:srcCompat="@drawable/btn_calendar"
                tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry,ImageContrastCheck,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_employee"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_btn"
                app:srcCompat="@drawable/btn_absent"
                tools:ignore="ContentDescription,ImageContrastCheck,RtlHardcoded,RtlSymmetry,SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frm_announcement"
        android:layout_width="415dp"
        android:layout_height="155dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_beranda"
        app:layout_constraintTop_toBottomOf="@+id/fitur"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/announcement"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="40dp"
                android:text="@string/announcement"
                android:textColor="@color/my_black"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="70dp"
        android:background="@color/btn"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/frm_announcement"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="110dp"
            android:layout_height="65dp"
            android:background="@drawable/rounded_btn"
            app:srcCompat="@drawable/btn_home"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_inbox"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:background="@drawable/rounded_btn"
            android:onClick="inbox"
            app:srcCompat="@drawable/btn_inbox"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_account"
            android:layout_width="110dp"
            android:layout_height="65dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded_btn"
            app:srcCompat="@drawable/btn_account"
            tools:ignore="ContentDescription,RtlSymmetry,SpeakableTextPresentCheck,VisualLintBounds" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>